--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 	<artifactId>netzwerkbetriebssysteme</artifactId>
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
-	
+
 	<!-- TODO project name  -->
 	<name>quickstart</name>
 	<description></description>
@@ -116,15 +116,30 @@
 			<scope>test</scope>
 			<version>${jetty.version}</version>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.wicket</groupId>
+            <artifactId>wicket-extensions</artifactId>
+            <version>9.7.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>33.4.0-jre</version>
+        </dependency>
 
-		<!-- uncomment if WebSocket support is needed
-		<dependency>
-			<groupId>org.eclipse.jetty.websocket</groupId>
-			<artifactId>websocket-jakarta-server</artifactId>
-			<version>${jetty.version}</version>
-			<scope>test</scope>
-		</dependency>
-		-->
+        <!-- uncomment if WebSocket support is needed
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>websocket-jakarta-server</artifactId>
+            <version>${jetty.version}</version>
+            <scope>test</scope>
+        </dependency>
+        -->
 	</dependencies>
 	<build>
 		<resources>
@@ -207,5 +222,5 @@
 			</snapshots>
 		</repository>
 	</repositories>
-	
+
 </project>
